# 1s2026-EA979-ProjetoPI-Efeitos

./: pyproject.toml  zip.py
.github/workflows/: test.yml
my-venv/: pyvenv.cfg
photo/: 245760_IMG_0040.HEIC  245760_IMG_0042.HEIC  260382_README.md  260382_prefix.sh
src/notebooks/: effects_preview.ipynb
src/unicamp_effects/: __init__.py  generate_comparison.py  generate_dataset.py  registry.py  run_effect.py  utils.py
src/unicamp_effects/effects/: 175807.py  177884.py  186629.py  233840.py  237310.py  241163.py  243360.py  245609.py  245760.py  246955.py  247145.py  250397.py  257234.py  260363.py  260382.py  297611.py  my_ra.py
src/unicamp_effects/effects/imports/: anisotropic_filters.py  colorspaces.py  dg.py  dithering_pallet.py
tests/: test_photos.py
